--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: My Personal Website
 description: "A basic website on GitHub Pages"
 
 markdown: kramdown
-theme: minima
+theme: jekyll-theme-merlot
 
 twitter_username: ???
 github_username:  ???
