--- a/_config.yml
+++ b/_config.yml
@@ -7,4 +7,4 @@ theme: minima
 
 twitter_username: ???
 github_username:  JeamayPalo
-linkedin_username: jeamay-palo
+linkedin_username: jeamay-palo-8bba1857
